@@ -7,28 +7,32 @@ The problem is that the **frontend is not connecting to the backend properly**. 
 ✅ **Backend is working** - APIs respond correctly via curl  
 ✅ **Database is working** - Data is being saved  
 ✅ **CORS is configured** - Backend accepts frontend requests  
-❌ **Frontend forms have issues** - Login/registration forms not working  
+❌ **Frontend forms have issues** - Login/registration forms not working
 
 ## 🔧 **What I Fixed**
 
 ### **1. Fixed Register Page**
+
 - **Problem**: Using `apiService` instead of direct `fetch`
 - **Fix**: Changed to direct `fetch` calls like login page
 - **Added**: Proper error handling and console logging
 - **Added**: Better validation
 
 ### **2. Fixed Login Page**
+
 - **Problem**: Complex validation logic
 - **Fix**: Simplified validation and error handling
 - **Added**: Console logging for debugging
 
 ### **3. Created Test Pages**
+
 - **`/test-login`** - Simple test for login/registration
 - **`/browser-test`** - Comprehensive browser testing
 
 ## 🚀 **Step-by-Step Testing**
 
 ### **Step 1: Test Backend (Already Working)**
+
 ```bash
 # Health check
 curl http://localhost:8080/actuator/health
@@ -45,12 +49,14 @@ curl -X POST http://localhost:8080/api/auth/register \
 ```
 
 ### **Step 2: Test Frontend Connection**
+
 1. **Visit:** http://localhost:5173/test-login
 2. **Click "Test Login"** - Should show success
 3. **Click "Test Registration"** - Should show success
 4. **Check browser console** for any errors
 
 ### **Step 3: Test Main Forms**
+
 1. **Visit:** http://localhost:5173/login
 2. **Try logging in** with:
    - Email: `test@example.com`
@@ -58,20 +64,21 @@ curl -X POST http://localhost:8080/api/auth/register \
 3. **Check browser console** for errors
 
 ### **Step 4: Test Registration**
+
 1. **Visit:** http://localhost:5173/register
 2. **Try creating account** with new email
 3. **Check browser console** for errors
 
-## 🔍 **Debugging Steps**
-
 ### **If Test Page Works But Main Forms Don't:**
 
 1. **Clear Browser Cache**
+
    - Press `Ctrl+Shift+Delete` (or `Cmd+Shift+Delete` on Mac)
    - Clear all data
    - Hard refresh (`Ctrl+F5`)
 
 2. **Check Browser Console**
+
    - Press `F12` to open developer tools
    - Go to Console tab
    - Look for errors when trying to login/register
@@ -85,35 +92,45 @@ curl -X POST http://localhost:8080/api/auth/register \
 ### **Common Issues and Fixes:**
 
 #### **Issue 1: CORS Error**
+
 ```
 Access to fetch at 'http://localhost:8080/api/auth/login' from origin 'http://localhost:5173' has been blocked by CORS policy
 ```
+
 **Fix**: Backend CORS is already configured correctly
 
 #### **Issue 2: Network Error**
+
 ```
 Failed to fetch
 ```
-**Fix**: 
+
+**Fix**:
+
 - Check if backend is running on port 8080
 - Check if frontend is running on port 5173
 - Restart both servers
 
 #### **Issue 3: 404 Error**
+
 ```
 POST http://localhost:8080/api/auth/login 404
 ```
+
 **Fix**: Backend is working, this shouldn't happen
 
 #### **Issue 4: 500 Error**
+
 ```
 POST http://localhost:8080/api/auth/login 500
 ```
+
 **Fix**: Check backend logs in IntelliJ
 
 ## 🎯 **Expected Results**
 
 ### **Successful Login:**
+
 ```json
 {
   "userid": 3,
@@ -123,19 +140,14 @@ POST http://localhost:8080/api/auth/login 500
 }
 ```
 
-### **Successful Registration:**
 ```json
-{
-  "userid": 7,
-  "username": "newuser",
-  "email": "new@example.com",
-  "role": "CUSTOMER"
-}
+{}
 ```
 
 ## 🚀 **Quick Fix Commands**
 
 ### **Restart Everything:**
+
 ```bash
 # Terminal 1 - Backend
 cd backend
@@ -143,11 +155,7 @@ cd backend
 
 # Terminal 2 - Frontend
 cd frontend
-npm run dev
-```
-
 ### **Clear Everything:**
-```bash
 # Clear browser cache
 # Clear localStorage
 # Restart servers
@@ -156,10 +164,37 @@ npm run dev
 ## 🎊 **Test Credentials**
 
 ### **Existing User:**
+
 - **Email:** `test@example.com`
+
+## 🛠 Upgrade to Java 21
+
+The backend has been updated to compile and run on Java 21 (LTS). Changes made:
+
+- Updated `backend/pom.xml` property `java.version` from `11` to `21`.
+- Switched the maven-compiler-plugin configuration to use `<release>21</release>` and enabled preview compiler args.
+
+How to verify locally:
+
+```powershell
+# Print Java and Maven versions
+cd backend; .\mvnw.cmd -v
+
+# Build the backend (skip tests for faster feedback)
+.\mvnw.cmd -DskipTests package
+
+# Run tests
+.\mvnw.cmd test
+```
+
+Notes:
+
+- This repo's CI/build agents must have JDK 21 available. If CI uses older JDKs, update their configuration or use a tool like SDKMAN/Adoptium to install JDK 21.
+- If you rely on preview features, remove `--enable-preview` after adjusting source code to non-preview APIs or when features become standard.
 - **Password:** `password123`
 
 ### **New Registration:**
+
 - **Username:** `newuser`
 - **Email:** `new@example.com`
 - **Phone:** `1234567890`
@@ -177,6 +212,7 @@ npm run dev
 6. **What happens when you try to login**
 
 **This will help me identify if the issue is:**
+
 - ✅ Fixed (test page works)
 - ❌ Still broken (test page doesn't work)
 - 🔧 Partially fixed (test works, main forms don't)
@@ -191,5 +227,3 @@ npm run dev
 4. **Tell me the exact results**
 
 **The test page will show us exactly where the problem is! 🚀**
-
-
